kube-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: penguin-service
spec:
  selector:
    app: penguin
  ports:
  - port: 80
    targetPort: 80
